@@ -162,6 +162,8 @@ Getting the full set of Windows driver files should be easier.
 <h2 class="title"><a name="SEE_ALSO">See Also</a></h2>
 <i>smbd(8)</i>, <i>smb.conf(5)</i>,
 <a href='http://localhost:631/help'>http://localhost:631/help</a>
+<br>
+<a href='http://www.cups.org/windows/'>http://www.cups.org/windows/</a>
 
 <h2 class="title"><a name="COPYRIGHT">Copyright</a></h2>
 Copyright 2007-2013 by Apple Inc.
